# science_party

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
.profiles/: clang  gcc
libraries/: CMakeLists.txt  guests.cpp  guests.hpp  party.cpp  party.hpp  utils.cpp  utils.hpp
science_party/: CMakeLists.txt  main.cpp
unit_tests/: CMakeLists.txt  guests.cpp  main.cpp  party.cpp  utils.cpp
